Added alternating colors to lines for Raw Reads timing page, the results timing page, the change event window, and the division stats page. You can now double click an event when changing an event to select said event. Cleaning up some pages and what they look like. Added the ability to export all distances for both Boston and Ultrasignup results. Fixed an issue where the navigation buttons when disabled didn't really appear to be that disabled.

--- a/ChronoKeep/UI/Announcer/AnnouncerWindow.xaml
+++ b/ChronoKeep/UI/Announcer/AnnouncerWindow.xaml
@@ -16,7 +16,7 @@
         >
     <Grid>
         <Grid.Resources>
-            <Style TargetType="ListViewItem" x:Key="alternateStyle">
+            <Style TargetType="ListViewItem" x:Key="alternatingStyle">
                 <Style.Triggers>
                     <Trigger Property="ItemsControl.AlternationIndex" Value="1">
                         <Setter Property="Background" Value="#48A6A6A6" />
@@ -84,7 +84,7 @@
             ScrollViewer.HorizontalScrollBarVisibility="Disabled" 
             Visibility="Collapsed"
             AlternationCount="2"
-            ItemContainerStyle="{StaticResource alternateStyle}"
+            ItemContainerStyle="{StaticResource alternatingStyle}"
             >
             <ListView.ItemTemplate>
                 <DataTemplate>
@@ -115,7 +115,7 @@
             ScrollViewer.CanContentScroll="True"
             ScrollViewer.HorizontalScrollBarVisibility="Disabled"
             AlternationCount="2"
-            ItemContainerStyle="{StaticResource alternateStyle}"
+            ItemContainerStyle="{StaticResource alternatingStyle}"
             >
             <ListView.ItemTemplate>
                 <DataTemplate>
