--- a/ChronoKeep/UI/EventWindows/ChangeEventWindow.xaml
+++ b/ChronoKeep/UI/EventWindows/ChangeEventWindow.xaml
@@ -36,6 +36,15 @@
             </ui:TitleBar.Tray>
         </ui:TitleBar>
         <Grid Grid.Row="1">
+            <Grid.Resources>
+                <Style TargetType="ListViewItem" x:Key="alternatingStyle">
+                    <Style.Triggers>
+                        <Trigger Property="ItemsControl.AlternationIndex" Value="1">
+                            <Setter Property="Background" Value="#48A6A6A6" />
+                        </Trigger>
+                    </Style.Triggers>
+                </Style>
+            </Grid.Resources>
             <Grid.RowDefinitions>
                 <RowDefinition Height="30"/>
                 <RowDefinition Height="*"/>
@@ -51,7 +60,17 @@
                 <TextBlock Grid.Column="1" Margin="8,4" Text="Year" />
                 <TextBlock Grid.Column="2" Margin="8,4" Text="Date" />
             </Grid>
-            <ListView x:Name="eventList" Grid.Row="1" Margin="4,0,4,0" ScrollViewer.HorizontalScrollBarVisibility="Auto" Width="Auto" Height="Auto">
+            <ListView
+                x:Name="eventList"
+                Grid.Row="1"
+                Margin="4,0,4,0"
+                ScrollViewer.HorizontalScrollBarVisibility="Auto"
+                Width="Auto"
+                Height="Auto"
+                AlternationCount="2"
+                ItemContainerStyle="{StaticResource alternatingStyle}"
+                MouseDoubleClick="eventList_MouseDoubleClick"
+                >
                 <ListView.ItemTemplate>
                     <DataTemplate>
                         <Grid>
