--- a/ChronoKeep/UI/Export/ExportDistanceResults.xaml
+++ b/ChronoKeep/UI/Export/ExportDistanceResults.xaml
@@ -6,7 +6,7 @@
         xmlns:local="clr-namespace:Chronokeep.UI.Export"
         xmlns:ui="http://schemas.lepo.co/wpfui/2022/xaml"
         mc:Ignorable="d"
-        Title="ExportDistanceResults" Height="250" Width="300" MinWidth="300" MaxWidth="300" Closing="Window_Closing"
+        Title="Export Ultrasignup Results" Height="250" Width="300" MinWidth="300" MaxWidth="300" Closing="Window_Closing"
         d:DataContext="{d:DesignInstance local:ExportDistanceResults, IsDesignTimeCreatable=True}"
         ExtendsContentIntoTitleBar="True"
         WindowBackdropType="Mica"
@@ -19,7 +19,10 @@
             <RowDefinition Height="*" />
         </Grid.RowDefinitions>
         <ui:TitleBar
-            Grid.Row="0">
+            Grid.Row="0"
+            ShowMinimize="False"
+            ShowMaximize="False"
+            >
             <ui:TitleBar.Tray>
                 <ui:NotifyIcon
                     FocusOnLeftClick="True"
@@ -37,19 +40,19 @@
         </ui:TitleBar>
         <Grid Grid.Row="1">
             <Grid.RowDefinitions>
-                <RowDefinition Height="30"/>
+                <RowDefinition Height="25"/>
                 <RowDefinition Height="*"/>
                 <RowDefinition Height="50"/>
             </Grid.RowDefinitions>
-            <TextBlock Text="Distance to Export" FontSize="16" VerticalAlignment="Center" TextAlignment="Center" Grid.Row="0"/>
+            <TextBlock Text="Distance to Export" FontSize="16" VerticalAlignment="Center" TextAlignment="Center" Grid.Row="0" Margin="0,0,0,0"/>
             <ComboBox Name="distanceBox" VerticalAlignment="Center" Grid.Row="1" Margin="20,20,20,20" />
             <Grid Grid.Row="2">
                 <Grid.ColumnDefinitions>
                     <ColumnDefinition Width="1*"/>
                     <ColumnDefinition Width="1*"/>
                 </Grid.ColumnDefinitions>
-                <Button x:Name="Done" Content="Submit" FontSize="16" Height="35" Margin="10,5,5,10" Click="Done_Click" Grid.Column="0" />
-                <Button x:Name="Cancel" Content="Cancel" FontSize="16" Height="35" Margin="5,5,10,10" Click="Cancel_Click" Grid.Column="1"/>
+                <Button x:Name="Done" Content="Submit" FontSize="16" Height="35" Margin="10,5,5,10" Click="Done_Click" Grid.Column="0" HorizontalAlignment="Stretch"/>
+                <Button x:Name="Cancel" Content="Cancel" FontSize="16" Height="35" Margin="5,5,10,10" Click="Cancel_Click" Grid.Column="1" HorizontalAlignment="Stretch"/>
             </Grid>
         </Grid>
     </Grid>
