--- a/ChronoKeep/UI/Export/ExportResults.xaml
+++ b/ChronoKeep/UI/Export/ExportResults.xaml
@@ -19,7 +19,10 @@
             <RowDefinition Height="*" />
         </Grid.RowDefinitions>
         <ui:TitleBar
-            Grid.Row="0">
+            Grid.Row="0"
+            ShowMinimize="False"
+            ShowMaximize="False"
+            >
             <ui:TitleBar.Tray>
                 <ui:NotifyIcon
                     FocusOnLeftClick="True"
@@ -41,15 +44,15 @@
                 <RowDefinition Height="*"/>
                 <RowDefinition Height="50"/>
             </Grid.RowDefinitions>
-            <TextBlock Text="Content to Export" FontSize="16" VerticalAlignment="Center" TextAlignment="Center" Grid.Row="0"/>
+            <TextBlock Text="Content to Export" FontSize="16" VerticalAlignment="Center" TextAlignment="Center" Grid.Row="0" Margin="0,-15,0,0"/>
             <ListBox Name="headersList" Margin="5,0,5,5" BorderThickness="0" Grid.Row="1"/>
             <Grid Grid.Row="2">
                 <Grid.ColumnDefinitions>
                     <ColumnDefinition Width="1*"/>
                     <ColumnDefinition Width="1*"/>
                 </Grid.ColumnDefinitions>
-                <Button x:Name="Done" Content="Submit" FontSize="16" Height="35" Margin="10,5,5,10" Click="Done_Click" Grid.Column="0" />
-                <Button x:Name="Cancel" Content="Cancel" FontSize="16" Height="35" Margin="5,5,10,10" Click="Cancel_Click" Grid.Column="1"/>
+                <Button x:Name="Done" Content="Submit" FontSize="16" Height="35" Margin="10,5,5,10" Click="Done_Click" Grid.Column="0" HorizontalAlignment="Stretch"/>
+                <Button x:Name="Cancel" Content="Cancel" FontSize="16" Height="35" Margin="5,5,10,10" Click="Cancel_Click" Grid.Column="1" HorizontalAlignment="Stretch"/>
             </Grid>
         </Grid>
     </Grid>
