--- a/ChronoKeep/UI/Timing/TimingRawReadsPage.xaml
+++ b/ChronoKeep/UI/Timing/TimingRawReadsPage.xaml
@@ -9,6 +9,15 @@
       d:DesignHeight="450" d:DesignWidth="800"
       Title="TimingRawReadsPage">
     <Grid>
+        <Grid.Resources>
+            <Style TargetType="ListViewItem" x:Key="alternatingStyle">
+                <Style.Triggers>
+                    <Trigger Property="ItemsControl.AlternationIndex" Value="1">
+                        <Setter Property="Background" Value="#48A6A6A6" />
+                    </Trigger>
+                </Style.Triggers>
+            </Style>
+        </Grid.Resources>
         <Grid.RowDefinitions>
             <RowDefinition Height="*" />
             <RowDefinition Height="45" />
@@ -28,6 +37,8 @@
                     ScrollViewer.CanContentScroll="True"
                     ScrollViewer.HorizontalScrollBarVisibility="Disabled"
                     Grid.Row="0"
+                    AlternationCount="2"
+                    ItemContainerStyle="{StaticResource alternatingStyle}"
                     >
                 <ListView.ItemTemplate>
                     <DataTemplate>
