--- a/ChronoKeep/UI/Timing/TimingResultsPage.xaml
+++ b/ChronoKeep/UI/Timing/TimingResultsPage.xaml
@@ -9,12 +9,20 @@
       d:DesignHeight="450" d:DesignWidth="800"
       Title="TimingResultsPage">
     <Grid>
-        <Grid>
-            <Grid.RowDefinitions>
-                <RowDefinition Height="*" />
-                <RowDefinition Height="25" />
-            </Grid.RowDefinitions>
-            <ListView
+        <Grid.Resources>
+            <Style TargetType="ListViewItem" x:Key="alternatingStyle">
+                <Style.Triggers>
+                    <Trigger Property="ItemsControl.AlternationIndex" Value="1">
+                        <Setter Property="Background" Value="#48A6A6A6" />
+                    </Trigger>
+                </Style.Triggers>
+            </Style>
+        </Grid.Resources>
+        <Grid.RowDefinitions>
+            <RowDefinition Height="*" />
+            <RowDefinition Height="25" />
+        </Grid.RowDefinitions>
+        <ListView
                 x:Name="updateListView"
                 VerticalAlignment="Stretch" 
                 HorizontalAlignment="Stretch"
@@ -27,80 +35,81 @@
                 ScrollViewer.CanContentScroll="True"
                 ScrollViewer.HorizontalScrollBarVisibility="Disabled"
                 Grid.Row="0"
+                AlternationCount="2"
+                ItemContainerStyle="{StaticResource alternatingStyle}"
                 >
-                <ListView.ItemTemplate>
-                    <DataTemplate>
-                        <Grid>
-                            <Grid.ColumnDefinitions>
-                                <ColumnDefinition Width="70"/>
-                                <ColumnDefinition Width="30"/>
-                                <ColumnDefinition Width="130"/>
-                                <ColumnDefinition Width="90"/>
-                                <ColumnDefinition Width="90"/>
-                                <ColumnDefinition Width="50"/>
-                                <ColumnDefinition Width="130"/>
-                                <ColumnDefinition Width="40"/>
-                                <ColumnDefinition Width="25"/>
-                                <ColumnDefinition Width="40"/>
-                                <ColumnDefinition Width="55"/>
-                                <ColumnDefinition Width="40"/>
-                                <ColumnDefinition Width="60"/>
-                                <ColumnDefinition Width="20"/>
-                                <ColumnDefinition Width="70"/>
-                            </Grid.ColumnDefinitions>
-                            <TextBlock Grid.Column="0" Margin="4,4" Text="{Binding LocationName}"/>
-                            <TextBlock Grid.Column="1" Margin="4,4" Text="{Binding Occurrence}"/>
-                            <TextBlock Grid.Column="2" Margin="4,4" Text="{Binding SysTime}"/>
-                            <TextBlock Grid.Column="3" Margin="4,4" Text="{Binding Time}"/>
-                            <TextBlock Grid.Column="4" Margin="4,4" Text="{Binding ChipLapTime}"/>
-                            <TextBlock Grid.Column="5" Margin="4,4" Text="{Binding Bib}"/>
-                            <TextBlock Grid.Column="6" Margin="4,4" Text="{Binding ParticipantName}"/>
-                            <TextBlock Grid.Column="7" Margin="4,4" Text="{Binding PlaceStr}"/>
-                            <TextBlock Grid.Column="8" Margin="4,4" Text="{Binding PrettyGender}"/>
-                            <TextBlock Grid.Column="9" Margin="4,4" Text="{Binding GenderPlaceStr}"/>
-                            <TextBlock Grid.Column="10" Margin="4,4" Text="{Binding AgeGroupName}"/>
-                            <TextBlock Grid.Column="11" Margin="4,4" Text="{Binding AgePlaceStr}"/>
-                            <TextBlock Grid.Column="12" Margin="4,4" Text="{Binding DistanceName}"/>
-                            <TextBlock Grid.Column="13" Margin="4,4" Text="{Binding PrettyType}"/>
-                            <TextBlock Grid.Column="14" Margin="4,4" Text="{Binding SegmentName}"/>
-                        </Grid>
-                    </DataTemplate>
-                </ListView.ItemTemplate>
-            </ListView>
-            <Grid Margin="5,0" Grid.Row="1">
-                <Grid.ColumnDefinitions>
-                    <ColumnDefinition Width="70"/>
-                    <ColumnDefinition Width="30"/>
-                    <ColumnDefinition Width="130"/>
-                    <ColumnDefinition Width="90"/>
-                    <ColumnDefinition Width="90"/>
-                    <ColumnDefinition Width="50"/>
-                    <ColumnDefinition Width="130"/>
-                    <ColumnDefinition Width="40"/>
-                    <ColumnDefinition Width="25"/>
-                    <ColumnDefinition Width="40"/>
-                    <ColumnDefinition Width="55"/>
-                    <ColumnDefinition Width="40"/>
-                    <ColumnDefinition Width="60"/>
-                    <ColumnDefinition Width="20"/>
-                    <ColumnDefinition Width="70"/>
-                </Grid.ColumnDefinitions>
-                <TextBlock Grid.Column="0" Margin="4,4" Text="Loc"/>
-                <TextBlock Grid.Column="1" Margin="4,4" Text="Occ"/>
-                <TextBlock Grid.Column="2" Margin="4,4" Text="System Time"/>
-                <TextBlock Grid.Column="3" Margin="4,4" Text="Time"/>
-                <TextBlock Grid.Column="4" Margin="4,4" Text="Chip Time" x:Name="ChipTimeHeader"/>
-                <TextBlock Grid.Column="5" Margin="4,4" Text="Bib"/>
-                <TextBlock Grid.Column="6" Margin="4,4" Text="Name"/>
-                <TextBlock Grid.Column="7" Margin="4,4" Text="Pl"/>
-                <TextBlock Grid.Column="8" Margin="4,4" Text="G"/>
-                <TextBlock Grid.Column="9" Margin="4,4" Text="GP"/>
-                <TextBlock Grid.Column="10" Margin="4,4" Text="Age Grp"/>
-                <TextBlock Grid.Column="11" Margin="4,4" Text="AP"/>
-                <TextBlock Grid.Column="12" Margin="4,4" Text="Distance"/>
-                <TextBlock Grid.Column="13" Margin="4,4" Text="T"/>
-                <TextBlock Grid.Column="14" Margin="4,4" Text="Segment"/>
-            </Grid>
+            <ListView.ItemTemplate>
+                <DataTemplate>
+                    <Grid>
+                        <Grid.ColumnDefinitions>
+                            <ColumnDefinition Width="70"/>
+                            <ColumnDefinition Width="30"/>
+                            <ColumnDefinition Width="130"/>
+                            <ColumnDefinition Width="90"/>
+                            <ColumnDefinition Width="90"/>
+                            <ColumnDefinition Width="50"/>
+                            <ColumnDefinition Width="130"/>
+                            <ColumnDefinition Width="40"/>
+                            <ColumnDefinition Width="25"/>
+                            <ColumnDefinition Width="40"/>
+                            <ColumnDefinition Width="55"/>
+                            <ColumnDefinition Width="40"/>
+                            <ColumnDefinition Width="60"/>
+                            <ColumnDefinition Width="20"/>
+                            <ColumnDefinition Width="70"/>
+                        </Grid.ColumnDefinitions>
+                        <TextBlock Grid.Column="0" Margin="4,4" Text="{Binding LocationName}"/>
+                        <TextBlock Grid.Column="1" Margin="4,4" Text="{Binding Occurrence}"/>
+                        <TextBlock Grid.Column="2" Margin="4,4" Text="{Binding SysTime}"/>
+                        <TextBlock Grid.Column="3" Margin="4,4" Text="{Binding Time}"/>
+                        <TextBlock Grid.Column="4" Margin="4,4" Text="{Binding ChipLapTime}"/>
+                        <TextBlock Grid.Column="5" Margin="4,4" Text="{Binding Bib}"/>
+                        <TextBlock Grid.Column="6" Margin="4,4" Text="{Binding ParticipantName}"/>
+                        <TextBlock Grid.Column="7" Margin="4,4" Text="{Binding PlaceStr}"/>
+                        <TextBlock Grid.Column="8" Margin="4,4" Text="{Binding PrettyGender}"/>
+                        <TextBlock Grid.Column="9" Margin="4,4" Text="{Binding GenderPlaceStr}"/>
+                        <TextBlock Grid.Column="10" Margin="4,4" Text="{Binding AgeGroupName}"/>
+                        <TextBlock Grid.Column="11" Margin="4,4" Text="{Binding AgePlaceStr}"/>
+                        <TextBlock Grid.Column="12" Margin="4,4" Text="{Binding DistanceName}"/>
+                        <TextBlock Grid.Column="13" Margin="4,4" Text="{Binding PrettyType}"/>
+                        <TextBlock Grid.Column="14" Margin="4,4" Text="{Binding SegmentName}"/>
+                    </Grid>
+                </DataTemplate>
+            </ListView.ItemTemplate>
+        </ListView>
+        <Grid Margin="5,0" Grid.Row="1">
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="70"/>
+                <ColumnDefinition Width="30"/>
+                <ColumnDefinition Width="130"/>
+                <ColumnDefinition Width="90"/>
+                <ColumnDefinition Width="90"/>
+                <ColumnDefinition Width="50"/>
+                <ColumnDefinition Width="130"/>
+                <ColumnDefinition Width="40"/>
+                <ColumnDefinition Width="25"/>
+                <ColumnDefinition Width="40"/>
+                <ColumnDefinition Width="55"/>
+                <ColumnDefinition Width="40"/>
+                <ColumnDefinition Width="60"/>
+                <ColumnDefinition Width="20"/>
+                <ColumnDefinition Width="70"/>
+            </Grid.ColumnDefinitions>
+            <TextBlock Grid.Column="0" Margin="4,4" Text="Loc"/>
+            <TextBlock Grid.Column="1" Margin="4,4" Text="Occ"/>
+            <TextBlock Grid.Column="2" Margin="4,4" Text="System Time"/>
+            <TextBlock Grid.Column="3" Margin="4,4" Text="Time"/>
+            <TextBlock Grid.Column="4" Margin="4,4" Text="Chip Time" x:Name="ChipTimeHeader"/>
+            <TextBlock Grid.Column="5" Margin="4,4" Text="Bib"/>
+            <TextBlock Grid.Column="6" Margin="4,4" Text="Name"/>
+            <TextBlock Grid.Column="7" Margin="4,4" Text="Pl"/>
+            <TextBlock Grid.Column="8" Margin="4,4" Text="G"/>
+            <TextBlock Grid.Column="9" Margin="4,4" Text="GP"/>
+            <TextBlock Grid.Column="10" Margin="4,4" Text="Age Grp"/>
+            <TextBlock Grid.Column="11" Margin="4,4" Text="AP"/>
+            <TextBlock Grid.Column="12" Margin="4,4" Text="Distance"/>
+            <TextBlock Grid.Column="13" Margin="4,4" Text="T"/>
+            <TextBlock Grid.Column="14" Margin="4,4" Text="Segment"/>
         </Grid>
     </Grid>
 </ui:UiPage>
