--- a/ChronoKeep/UI/API/APIPage1.xaml
+++ b/ChronoKeep/UI/API/APIPage1.xaml
@@ -14,7 +14,7 @@
             <ColumnDefinition Width="*"/>
         </Grid.ColumnDefinitions>
         <StackPanel HorizontalAlignment="Center" VerticalAlignment="Center" Grid.ColumnSpan="2">
-            <Label Content="Select API to use:" FontSize="16" VerticalAlignment="Center" HorizontalAlignment="Center" Margin="0,0,0,10"/>
+            <TextBlock Text="Select API to use:" FontSize="16" VerticalAlignment="Center" HorizontalAlignment="Center" TextAlignment="Center" Margin="0,0,0,10"/>
             <ComboBox Name="APIBox" Width="200" VerticalAlignment="Center" />
         </StackPanel>
         <Button x:Name="unlinkButton" Content="Unlink API" Height="35" Width="100" VerticalAlignment="Bottom" HorizontalAlignment="Center" Margin="0,0,0,50" Click="Unlink_Click" Visibility="Collapsed" Grid.ColumnSpan="2"/>
