--- a/ChronoKeep/UI/MainPages/ParticipantsPage.xaml
+++ b/ChronoKeep/UI/MainPages/ParticipantsPage.xaml
@@ -1,14 +1,16 @@
 ﻿<ui:UiPage x:Class="Chronokeep.UI.MainPages.ParticipantsPage"
-      xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-      xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-      xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-      xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-      xmlns:local="clr-namespace:Chronokeep.UI.MainPages"
-      xmlns:ui="http://schemas.lepo.co/wpfui/2022/xaml"
-      mc:Ignorable="d"
-      d:DesignHeight="450" d:DesignWidth="800"
-      Title="ParticipantsPage" Loaded="Page_Loaded">
-
+           xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+           xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+           xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+           xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+           xmlns:local="clr-namespace:Chronokeep.UI.MainPages"
+           xmlns:ui="http://schemas.lepo.co/wpfui/2022/xaml"
+           mc:Ignorable="d"
+           d:DesignHeight="450"
+           d:DesignWidth="800"
+           Title="ParticipantsPage"
+           Loaded="Page_Loaded"
+      >
     <Grid>
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="1*"/>
@@ -126,96 +128,106 @@
                 HorizontalAlignment="Stretch"
                 />
         </StackPanel>
-        <ScrollViewer x:Name="ScrollBox" Grid.Column="0" VerticalScrollBarVisibility="Auto" HorizontalScrollBarVisibility="Auto">
-            <Grid>
-                <Grid.RowDefinitions>
-                    <RowDefinition Height="20"/>
-                    <RowDefinition Height="*"/>
-                </Grid.RowDefinitions>
-                <Grid Grid.Row="0" Margin="8,0,8,0">
-                    <Grid.ColumnDefinitions>
-                        <!-- Bib -->
-                        <ColumnDefinition Width="45" />
-                        <!-- Distance -->
-                        <ColumnDefinition Width="125" />
-                        <!-- First -->
-                        <ColumnDefinition Width="100" />
-                        <!-- Last -->
-                        <ColumnDefinition Width="175" />
-                        <!-- Gender -->
-                        <ColumnDefinition Width="75" />
-                        <!-- Birthday -->
-                        <ColumnDefinition Width="75" />
-                        <!-- Mobile -->
-                        <ColumnDefinition Width="100" />
-                        <!-- EC Name -->
-                        <ColumnDefinition Width="150" />
-                        <!-- EC Phone -->
-                        <ColumnDefinition Width="150" />
-                        <!-- Anon -->
-                        <ColumnDefinition Width="35" />
-                    </Grid.ColumnDefinitions>
-                    <TextBlock Grid.Column="0" Text="Bib"/>
-                    <TextBlock Grid.Column="1" Text="Distance"/>
-                    <TextBlock Grid.Column="2" Text="First"/>
-                    <TextBlock Grid.Column="3" Text="Last"/>
-                    <TextBlock Grid.Column="4" Text="Gender"/>
-                    <TextBlock Grid.Column="5" Text="Birthday"/>
-                    <TextBlock Grid.Column="6" Text="Mobile"/>
-                    <TextBlock Grid.Column="7" Text="EC Name"/>
-                    <TextBlock Grid.Column="8" Text="EC Phone"/>
-                    <TextBlock Grid.Column="9" Text="Anon"/>
-                </Grid>
-                <ListView 
-                    Name="ParticipantsList" 
-                    VerticalAlignment="Stretch"
-                    HorizontalAlignment="Stretch"
-                    SelectionMode="Extended"
-                    Loaded="ParticipantsList_Loaded" 
-                    MouseDoubleClick="ParticipantsList_MouseDoubleClick"
-                    Grid.Row="1"
-                    PreviewMouseWheel="ParticipantsList_PreviewMouseWheel"
-                    >
-                    <ListView.ItemTemplate>
-                        <DataTemplate>
-                            <Grid Grid.Row="0">
-                                <Grid.ColumnDefinitions>
-                                    <!-- Bib -->
-                                    <ColumnDefinition Width="45" />
-                                    <!-- Distance -->
-                                    <ColumnDefinition Width="125" />
-                                    <!-- First -->
-                                    <ColumnDefinition Width="100" />
-                                    <!-- Last -->
-                                    <ColumnDefinition Width="175" />
-                                    <!-- Gender -->
-                                    <ColumnDefinition Width="75" />
-                                    <!-- Birthday -->
-                                    <ColumnDefinition Width="75" />
-                                    <!-- Mobile -->
-                                    <ColumnDefinition Width="100" />
-                                    <!-- EC Name -->
-                                    <ColumnDefinition Width="150" />
-                                    <!-- EC Phone -->
-                                    <ColumnDefinition Width="150" />
-                                    <!-- Anon -->
-                                    <ColumnDefinition Width="35" />
-                                </Grid.ColumnDefinitions>
-                                <TextBlock Grid.Column="0" Text="{Binding Bib}"/>
-                                <TextBlock Grid.Column="1" Text="{Binding Distance}"/>
-                                <TextBlock Grid.Column="2" Text="{Binding FirstName}"/>
-                                <TextBlock Grid.Column="3" Text="{Binding LastName}"/>
-                                <TextBlock Grid.Column="4" Text="{Binding Gender}"/>
-                                <TextBlock Grid.Column="5" Text="{Binding Birthdate}"/>
-                                <TextBlock Grid.Column="6" Text="{Binding Mobile}"/>
-                                <TextBlock Grid.Column="7" Text="{Binding ECName}"/>
-                                <TextBlock Grid.Column="8" Text="{Binding ECPhone}"/>
-                                <TextBlock Grid.Column="9" Text="{Binding PrettyAnonymous}"/>
-                            </Grid>
-                        </DataTemplate>
-                    </ListView.ItemTemplate>
-                </ListView>
+        <Grid>
+            <Grid.Resources>
+                <Style TargetType="ListViewItem" x:Key="alternatingStyle">
+                    <Style.Triggers>
+                        <Trigger Property="ItemsControl.AlternationIndex" Value="1">
+                            <Setter Property="Background" Value="#48A6A6A6" />
+                        </Trigger>
+                    </Style.Triggers>
+                </Style>
+            </Grid.Resources>
+            <Grid.RowDefinitions>
+                <RowDefinition Height="20"/>
+                <RowDefinition Height="*"/>
+            </Grid.RowDefinitions>
+            <Grid Grid.Row="0" Margin="4,0,4,0">
+                <Grid.ColumnDefinitions>
+                    <!-- Bib -->
+                    <ColumnDefinition Width="45" />
+                    <!-- Distance -->
+                    <ColumnDefinition Width="125" />
+                    <!-- First -->
+                    <ColumnDefinition Width="100" />
+                    <!-- Last -->
+                    <ColumnDefinition Width="175" />
+                    <!-- Gender -->
+                    <ColumnDefinition Width="75" />
+                    <!-- Birthday -->
+                    <ColumnDefinition Width="100" />
+                    <!-- Mobile -->
+                    <ColumnDefinition Width="120" />
+                    <!-- EC Name -->
+                    <ColumnDefinition Width="150" />
+                    <!-- EC Phone -->
+                    <ColumnDefinition Width="150" />
+                    <!-- Anon -->
+                    <ColumnDefinition Width="35" />
+                </Grid.ColumnDefinitions>
+                <TextBlock Grid.Column="0" Text="Bib"/>
+                <TextBlock Grid.Column="1" Text="Distance"/>
+                <TextBlock Grid.Column="2" Text="First"/>
+                <TextBlock Grid.Column="3" Text="Last"/>
+                <TextBlock Grid.Column="4" Text="Gender"/>
+                <TextBlock Grid.Column="5" Text="Birthday"/>
+                <TextBlock Grid.Column="6" Text="Mobile"/>
+                <TextBlock Grid.Column="7" Text="EC Name"/>
+                <TextBlock Grid.Column="8" Text="EC Phone"/>
+                <TextBlock Grid.Column="9" Text="Anon"/>
             </Grid>
-        </ScrollViewer>
+            <ListView 
+                Name="ParticipantsList" 
+                VerticalAlignment="Stretch"
+                HorizontalAlignment="Stretch"
+                SelectionMode="Extended"
+                Loaded="ParticipantsList_Loaded"
+                MouseDoubleClick="ParticipantsList_MouseDoubleClick"
+                ScrollViewer.CanContentScroll="True"
+                ScrollViewer.HorizontalScrollBarVisibility="Disabled"
+                Grid.Row="1"
+                AlternationCount="2"
+                ItemContainerStyle="{StaticResource alternatingStyle}"
+                >
+                <ListView.ItemTemplate>
+                    <DataTemplate>
+                        <Grid Grid.Row="0">
+                            <Grid.ColumnDefinitions>
+                                <!-- Bib -->
+                                <ColumnDefinition Width="45" />
+                                <!-- Distance -->
+                                <ColumnDefinition Width="125" />
+                                <!-- First -->
+                                <ColumnDefinition Width="100" />
+                                <!-- Last -->
+                                <ColumnDefinition Width="175" />
+                                <!-- Gender -->
+                                <ColumnDefinition Width="75" />
+                                <!-- Birthday -->
+                                <ColumnDefinition Width="100" />
+                                <!-- Mobile -->
+                                <ColumnDefinition Width="120" />
+                                <!-- EC Name -->
+                                <ColumnDefinition Width="150" />
+                                <!-- EC Phone -->
+                                <ColumnDefinition Width="150" />
+                                <!-- Anon -->
+                                <ColumnDefinition Width="35" />
+                            </Grid.ColumnDefinitions>
+                            <TextBlock Grid.Column="0" Text="{Binding Bib}"/>
+                            <TextBlock Grid.Column="1" Text="{Binding Distance}"/>
+                            <TextBlock Grid.Column="2" Text="{Binding FirstName}"/>
+                            <TextBlock Grid.Column="3" Text="{Binding LastName}"/>
+                            <TextBlock Grid.Column="4" Text="{Binding Gender}"/>
+                            <TextBlock Grid.Column="5" Text="{Binding Birthdate}"/>
+                            <TextBlock Grid.Column="6" Text="{Binding Mobile}"/>
+                            <TextBlock Grid.Column="7" Text="{Binding ECName}"/>
+                            <TextBlock Grid.Column="8" Text="{Binding ECPhone}"/>
+                            <TextBlock Grid.Column="9" Text="{Binding PrettyAnonymous}"/>
+                        </Grid>
+                    </DataTemplate>
+                </ListView.ItemTemplate>
+            </ListView>
+        </Grid>
     </Grid>
 </ui:UiPage>
