--- a/ChronoKeep/UI/MainWindow.xaml
+++ b/ChronoKeep/UI/MainWindow.xaml
@@ -48,6 +48,7 @@
             x:Name="RootNavigation"
             Grid.Column="0"
             Frame="{Binding ElementName=TheFrame, Mode=OneWay}"
+            MaxWidth="150"
             >
             <ui:NavigationCompact.Items>
                 <ui:NavigationItem
