--- a/ChronoKeep/UI/MainPages/ChipAssigmentPage.xaml
+++ b/ChronoKeep/UI/MainPages/ChipAssigmentPage.xaml
@@ -16,21 +16,30 @@
         <Grid Name="everything">
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="*"/>
-                <ColumnDefinition Width="250"/>
+                <ColumnDefinition Width="230"/>
             </Grid.ColumnDefinitions>
             <Grid Grid.Column="1">
+                <Grid.Resources>
+                    <Style TargetType="ListViewItem" x:Key="alternatingStyle">
+                        <Style.Triggers>
+                            <Trigger Property="ItemsControl.AlternationIndex" Value="1">
+                                <Setter Property="Background" Value="#48A6A6A6" />
+                            </Trigger>
+                        </Style.Triggers>
+                    </Style>
+                </Grid.Resources>
                 <Grid.RowDefinitions>
                     <RowDefinition Height="20"/>
                     <RowDefinition Height="*"/>
                     <RowDefinition Height="55"/>
                 </Grid.RowDefinitions>
-                <Grid Grid.Row="0">
+                <Grid Grid.Row="0" Margin="4,0">
                     <Grid.ColumnDefinitions>
-                        <ColumnDefinition Width="1*"/>
-                        <ColumnDefinition Width="1*"/>
+                        <ColumnDefinition Width="90"/>
+                        <ColumnDefinition Width="*"/>
                     </Grid.ColumnDefinitions>
-                    <TextBlock Grid.Column="0" Margin="12,0,0,0" Text="Bib"/>
-                    <TextBlock Grid.Column="1" Margin="0,0,0,0" Text="Chip"/>
+                    <TextBlock Grid.Column="0" Margin="10,0" Text="Bib"/>
+                    <TextBlock Grid.Column="1" Margin="4,0" Text="Chip"/>
                 </Grid>
                 <ListView
                     Name="bibChipList" 
@@ -38,16 +47,19 @@
                     HorizontalAlignment="Stretch"
                     SelectionMode="Extended"
                     Grid.Row="1"
+                    AlternationCount="2"
+                    ItemContainerStyle="{StaticResource alternatingStyle}"
+                    ScrollViewer.CanContentScroll="True"
                     >
                     <ListView.ItemTemplate>
                         <DataTemplate>
                             <Grid>
                                 <Grid.ColumnDefinitions>
-                                    <ColumnDefinition Width="1*"/>
-                                    <ColumnDefinition Width="1*"/>
+                                    <ColumnDefinition Width="90"/>
+                                    <ColumnDefinition Width="*"/>
                                 </Grid.ColumnDefinitions>
-                                <TextBlock Grid.Column="0" Margin="8,4" Text="{Binding Bib}"/>
-                                <TextBlock Grid.Column="1" Margin="8,4" Text="{Binding Chip}"/>
+                                <TextBlock Grid.Column="0" Margin="10,4" Text="{Binding Bib}"/>
+                                <TextBlock Grid.Column="1" Margin="4,4" Text="{Binding Chip}"/>
                             </Grid>
                         </DataTemplate>
                     </ListView.ItemTemplate>
