--- a/ChronoKeep/UI/Import/ImportFilePageConflicts.xaml
+++ b/ChronoKeep/UI/Import/ImportFilePageConflicts.xaml
@@ -6,31 +6,32 @@
       xmlns:local="clr-namespace:Chronokeep.UI.Import"
       xmlns:ui="http://schemas.lepo.co/wpfui/2022/xaml"
       mc:Ignorable="d" 
-      d:DesignHeight="450" d:DesignWidth="400"
+      d:DesignHeight="450"
+      d:DesignWidth="400"
       Title="ImportPageMultiples">
     <Grid>
         <Grid.RowDefinitions>
-            <RowDefinition Height="60" />
+            <RowDefinition Height="Auto" />
             <RowDefinition Height="1*" />
         </Grid.RowDefinitions>
         <StackPanel>
-            <TextBlock Text="Select entries to keep." FontSize="16" Margin="10,0,10,0" Grid.Row="0" VerticalAlignment="Center" TextAlignment="Center"/>
-            <Grid>
+            <TextBlock Text="Select entries to keep." FontSize="16" Margin="0,0,0,5" Grid.Row="0" VerticalAlignment="Center" TextAlignment="Center"/>
+            <Grid Margin="10,5">
                 <Grid.ColumnDefinitions>
-                    <ColumnDefinition Width="20"/>
+                    <ColumnDefinition Width="50"/>
                     <ColumnDefinition Width="30"/>
                     <ColumnDefinition Width="50"/>
-                    <ColumnDefinition Width="1*"/>
-                    <ColumnDefinition Width="1*"/>
+                    <ColumnDefinition Width="*"/>
+                    <ColumnDefinition Width="*"/>
                     <ColumnDefinition Width="50"/>
                     <ColumnDefinition Width="50"/>
                 </Grid.ColumnDefinitions>
-                <TextBlock Text="Old" Grid.Column="1" />
-                <TextBlock Text="Bib" Grid.Column="2" />
-                <TextBlock Text="Div" Grid.Column="3" />
-                <TextBlock Text="Name" Grid.Column="4" />
-                <TextBlock Text="Age" Grid.Column="6" />
-                <TextBlock Text="Sex" Grid.Column="5" />
+                <TextBlock Text="Old" Grid.Column="1"/>
+                <TextBlock Text="Bib" Grid.Column="2"/>
+                <TextBlock Text="Div" Grid.Column="3"/>
+                <TextBlock Text="Name" Grid.Column="4"/>
+                <TextBlock Text="Gender" Grid.Column="5"/>
+                <TextBlock Text="Age" Grid.Column="6"/>
             </Grid>
         </StackPanel>
         <ListBox x:Name="multiplesListBox" KeyboardNavigation.TabNavigation="Continue" HorizontalContentAlignment="Stretch" VerticalContentAlignment="Stretch" IsTabStop="False" Grid.Row="1">
