--- a/ChronoKeep/UI/API/APIPage2.xaml
+++ b/ChronoKeep/UI/API/APIPage2.xaml
@@ -9,33 +9,133 @@
       d:DesignHeight="450" d:DesignWidth="300"
       Title="APIPage2">
 
-    <Grid>
-        <TextBlock Name="holdingLabel" Text="Retrieving Events, Please Hold." FontSize="18" VerticalAlignment="Center" MaxWidth="250" HorizontalAlignment="Center" TextWrapping="Wrap" Visibility="Visible"/>
-        <StackPanel Name="eventPanel" HorizontalAlignment="Center" VerticalAlignment="Center" Visibility="Collapsed">
-            <TextBlock Text="Select Event to link to:" FontSize="16" VerticalAlignment="Center" HorizontalAlignment="Center" Margin="0,0,0,10"/>
-            <ComboBox Name="EventBox" Width="200" VerticalAlignment="Center" Margin="0,0,0,10" SelectionChanged="EventBox_SelectionChanged"/>
-            <StackPanel x:Name="newPanel" Visibility="Collapsed">
-                <TextBlock Text="New Event:" FontSize="16" VerticalAlignment="Center" HorizontalAlignment="Center" Margin="0,0,0,5"/>
+    <StackPanel VerticalAlignment="Center">
+        <TextBlock
+            Name="holdingLabel" 
+            Text="Retrieving Events, Please Hold."
+            FontSize="18" 
+            VerticalAlignment="Center"
+            MaxWidth="250" 
+            HorizontalAlignment="Center" 
+            TextWrapping="Wrap" 
+            Visibility="Visible"
+            Margin="0,10,0,0"
+            />
+        <StackPanel
+            Name="eventPanel" 
+            HorizontalAlignment="Center"
+            VerticalAlignment="Center" 
+            Visibility="Collapsed"
+            >
+            <TextBlock
+                Text="Select Event to link to:"
+                FontSize="16"
+                VerticalAlignment="Center"
+                HorizontalAlignment="Center"
+                Margin="0,0,0,10"
+                />
+            <ComboBox
+                Name="EventBox"
+                Width="200"
+                VerticalAlignment="Center"
+                Margin="0,0,0,10"
+                SelectionChanged="EventBox_SelectionChanged"
+                />
+            <StackPanel 
+                x:Name="newPanel" 
+                Visibility="Collapsed"
+                >
+                <TextBlock 
+                    Text="New Event:" 
+                    FontSize="16"
+                    VerticalAlignment="Center" 
+                    HorizontalAlignment="Center"
+                    Margin="0,0,0,5"
+                    />
                 <DockPanel Margin="0,0,0,5">
-                    <TextBlock Text="Name" FontSize="15" Width="100" VerticalAlignment="Center" TextAlignment="Right" Padding="0,0,5,0"/>
-                    <TextBox x:Name="nameBox" FontSize="15" Width="180" VerticalAlignment="Center" HorizontalAlignment="Center" />
+                    <TextBlock
+                        Text="Name"
+                        FontSize="15"
+                        Width="100"
+                        VerticalAlignment="Center"
+                        TextAlignment="Right"
+                        Padding="0,0,5,0"
+                        />
+                    <TextBox
+                        x:Name="nameBox"
+                        FontSize="15"
+                        Width="180"
+                        VerticalAlignment="Center"
+                        HorizontalAlignment="Stretch"
+                        />
                 </DockPanel>
                 <DockPanel Margin="0,0,0,5">
-                    <TextBlock Text="Slug" FontSize="15" Width="100" VerticalAlignment="Center" TextAlignment="Right" Padding="0,0,5,0"/>
-                    <TextBox Name="slugBox" FontSize="15" Width="180" VerticalAlignment="Center" HorizontalAlignment="Center" />
+                    <TextBlock
+                        Text="Slug" 
+                        FontSize="15"
+                        Width="100"
+                        VerticalAlignment="Center"
+                        TextAlignment="Right"
+                        Padding="0,0,5,0"
+                        />
+                    <TextBox
+                        Name="slugBox"
+                        FontSize="15"
+                        Width="180"
+                        VerticalAlignment="Center"
+                        HorizontalAlignment="Stretch"
+                        />
                 </DockPanel>
                 <DockPanel Margin="0,0,0,5">
-                    <TextBlock Text="Contact Email" FontSize="15" Width="100" VerticalAlignment="Center" TextAlignment="Right" Padding="0,0,5,0"/>
-                    <TextBox Name="contactBox" FontSize="15" Width="180" VerticalAlignment="Center" HorizontalAlignment="Center" />
+                    <TextBlock
+                        Text="Contact Email"
+                        FontSize="15"
+                        Width="100"
+                        VerticalAlignment="Center" 
+                        TextAlignment="Right"
+                        Padding="0,0,5,0"
+                        />
+                    <TextBox 
+                        Name="contactBox"
+                        FontSize="15" 
+                        Width="180"
+                        VerticalAlignment="Center" 
+                        HorizontalAlignment="Stretch"
+                        />
                 </DockPanel>
                 <DockPanel>
-                    <CheckBox x:Name="restrictBox" Content="Restrict Access" FontSize="15" VerticalContentAlignment="Center" HorizontalAlignment="Center" Margin="0,0,0,5"/>
+                    <CheckBox 
+                        x:Name="restrictBox"
+                        Content="Restrict Access" 
+                        FontSize="15"
+                        VerticalContentAlignment="Center" 
+                        HorizontalAlignment="Center"
+                        Margin="0,0,0,5"
+                        />
                 </DockPanel>
             </StackPanel>
         </StackPanel>
-        <StackPanel Orientation="Horizontal" HorizontalAlignment="Center">
-            <Button Content="Next" Height="35" Width="100" VerticalAlignment="Bottom" Margin="0,0,10,10" Click="Next_Click" />
-            <Button Content="Cancel" Height="35" Width="100" VerticalAlignment="Bottom" Margin="10,0,0,10" Click="Cancel_Click" />
+        <StackPanel 
+            Orientation="Horizontal" 
+            HorizontalAlignment="Center"
+            Margin="0,10,0,0"
+            >
+            <Button
+                Content="Next"
+                Height="35"
+                Width="120"
+                VerticalAlignment="Bottom"
+                Margin="0,0,10,10"
+                Click="Next_Click"
+                />
+            <Button
+                Content="Cancel"
+                Height="35"
+                Width="120"
+                VerticalAlignment="Bottom" 
+                Margin="10,0,0,10"
+                Click="Cancel_Click"
+                />
         </StackPanel>
-    </Grid>
+    </StackPanel>
 </ui:UiPage>
