--- a/ChronoKeep/UI/API/APIPage3.xaml
+++ b/ChronoKeep/UI/API/APIPage3.xaml
@@ -9,26 +9,104 @@
       d:DesignHeight="450" d:DesignWidth="300"
       Title="APIPage3">
 
-    <Grid>
-        <TextBlock Name="holdingLabel" Text="Retrieving Events, Please Hold." FontSize="18" VerticalAlignment="Center" MaxWidth="250" HorizontalAlignment="Center" TextWrapping="Wrap" Visibility="Visible"/>
-        <StackPanel Name="yearPanel" HorizontalAlignment="Center" VerticalAlignment="Center" Visibility="Collapsed">
-            <TextBlock Text="Select Year to link to:" FontSize="16" VerticalAlignment="Center" HorizontalAlignment="Center" Margin="0,0,0,10"/>
-            <ComboBox Name="YearBox" Width="200" VerticalAlignment="Center" Margin="0,0,0,10" SelectionChanged="YearBox_SelectionChanged"/>
-            <StackPanel x:Name="newPanel" Visibility="Collapsed">
-                <TextBlock Text="New Year:" FontSize="16" VerticalAlignment="Center" HorizontalAlignment="Center" Margin="0,0,0,5"/>
+    <StackPanel>
+        <TextBlock
+            Name="holdingLabel" 
+            Text="Retrieving Events, Please Hold." 
+            FontSize="18" 
+            VerticalAlignment="Center"
+            MaxWidth="250"
+            HorizontalAlignment="Center"
+            TextWrapping="Wrap"
+            Visibility="Visible"
+            Margin="0,10,0,0"
+            />
+        <StackPanel
+            Name="yearPanel"
+            HorizontalAlignment="Center"
+            VerticalAlignment="Center" 
+            Visibility="Collapsed"
+            >
+            <TextBlock
+                Text="Select Year to link to:"
+                FontSize="16"
+                VerticalAlignment="Center"
+                HorizontalAlignment="Center"
+                Margin="0,0,0,10"
+                />
+            <ComboBox
+                Name="YearBox"
+                Width="200"
+                VerticalAlignment="Center"
+                Margin="0,0,0,10"
+                SelectionChanged="YearBox_SelectionChanged"
+                />
+            <StackPanel
+                x:Name="newPanel" Visibility="Collapsed">
+                <TextBlock 
+                    Text="New Year:"
+                    FontSize="16"
+                    VerticalAlignment="Center" 
+                    HorizontalAlignment="Center"
+                    Margin="0,0,0,5"
+                    />
                 <DockPanel Margin="0,0,0,5">
-                    <TextBlock Text="Year" FontSize="15" Width="60" VerticalAlignment="Center" TextAlignment="Right" Padding="0,0,5,0"/>
-                    <TextBox x:Name="yearBox" FontSize="15" Width="220" VerticalAlignment="Center" HorizontalAlignment="Stretch" />
+                    <TextBlock
+                        Text="Year"
+                        FontSize="15"
+                        Width="60"
+                        VerticalAlignment="Center"
+                        TextAlignment="Right"
+                        Padding="0,0,5,0"
+                        />
+                    <TextBox
+                        x:Name="yearBox"
+                        FontSize="15"
+                        Width="220"
+                        VerticalAlignment="Center"
+                        HorizontalAlignment="Stretch"
+                        />
                 </DockPanel>
                 <DockPanel Margin="0,0,0,5">
-                    <TextBlock Text="Date" FontSize="15" Width="60" VerticalAlignment="Center" TextAlignment="Right" Padding="0,0,5,0"/>
-                    <DatePicker Name="dateBox" FontSize="15" Width="220" VerticalAlignment="Center" HorizontalAlignment="Stretch" />
+                    <TextBlock 
+                        Text="Date"
+                        FontSize="15"
+                        Width="60"
+                        VerticalAlignment="Center"
+                        TextAlignment="Right"
+                        Padding="0,0,5,0"
+                        />
+                    <DatePicker 
+                        Name="dateBox"
+                        FontSize="15"
+                        Width="220"
+                        VerticalAlignment="Center"
+                        HorizontalAlignment="Stretch"
+                        />
                 </DockPanel>
             </StackPanel>
         </StackPanel>
-        <StackPanel Orientation="Horizontal" HorizontalAlignment="Center">
-            <Button Content="Finish" Height="35" Width="100" VerticalAlignment="Bottom" Margin="0,0,10,10" Click="Next_Click" />
-            <Button Content="Cancel" Height="35" Width="100" VerticalAlignment="Bottom" Margin="10,0,0,10" Click="Cancel_Click" />
+        <StackPanel
+            Orientation="Horizontal"
+            HorizontalAlignment="Center"
+            Margin="0,10,0,0"
+            >
+            <Button
+                Content="Finish"
+                Height="35"
+                Width="100"
+                VerticalAlignment="Bottom"
+                Margin="0,0,10,10"
+                Click="Next_Click"
+                />
+            <Button
+                Content="Cancel"
+                Height="35"
+                Width="100"
+                VerticalAlignment="Bottom"
+                Margin="10,0,0,10"
+                Click="Cancel_Click"
+                />
         </StackPanel>
-    </Grid>
+    </StackPanel>
 </ui:UiPage>
