--- a/ChronoKeep/UI/MainPages/ParticipantsPage.xaml
+++ b/ChronoKeep/UI/MainPages/ParticipantsPage.xaml
@@ -31,19 +31,23 @@
                 Content="Export"
                 FontSize="14" 
                 Height="35"
-                Margin="10,0,10,5"
+                Margin="10,0,10,0"
                 Click="Export_Click"
                 HorizontalAlignment="Stretch"
                 />
-            <TextBlock 
+            <StackPanel
+                x:Name="apiPanel"
+                Visibility="Collapsed"
+                >
+                <TextBlock 
                 Text="API Commands"
                 FontSize="16" 
                 VerticalAlignment="Center"
                 TextAlignment="Center"
-                Margin="5,5,5,0"
+                Margin="5,10,5,0"
                 Padding="0,0,0,0"
                 />
-            <Button 
+                <Button 
                 Name="Upload" 
                 Content="Upload" 
                 FontSize="14" 
@@ -52,7 +56,7 @@
                 Click="Upload_Click" 
                 HorizontalAlignment="Stretch"
                 />
-            <Button 
+                <Button 
                 Name="Delete"
                 Content="Delete Uploaded"
                 FontSize="14"
@@ -61,10 +65,11 @@
                 Click="Delete_Click"
                 HorizontalAlignment="Stretch"
                 />
+            </StackPanel>
             <TextBlock
                 Text="View"
                 FontSize="16"
-                Margin="10,0,10,0"
+                Margin="10,5"
                 TextAlignment="Center"
                 />
             <DockPanel Name="DistanceBoxHolder" />
@@ -77,7 +82,7 @@
             <TextBlock 
                 Text="Sort By"
                 FontSize="16"
-                Margin="10,0,10,0" 
+                Margin="10,5" 
                 TextAlignment="Center"
                 />
             <ComboBox 
