--- a/ChronoKeep/UI/MainPages/SettingsPage.xaml
+++ b/ChronoKeep/UI/MainPages/SettingsPage.xaml
@@ -83,6 +83,10 @@
                     <TextBox Name="DefaultExportDirBox" FontSize="14" Margin="0,10,10,10" VerticalContentAlignment="Center" IsEnabled="False" Grid.Column="1"/>
                     <Button Name="ChangeExport" FontSize="14" Height="35" Margin="0,10,10,10" HorizontalAlignment="Stretch" Grid.Column="2" Content="Change" Click="ChangeExport_Click"/>
                 </Grid>
+                <DockPanel>
+                    <TextBlock Text="Upload Interval" FontSize="14" Margin="10" Width="170" VerticalAlignment="Center" />
+                    <ComboBox Name="UploadIntervalBox" FontSize="14" Margin="0,10,10,10" VerticalContentAlignment="Center" />
+                </DockPanel>
             </StackPanel>
             <StackPanel Grid.Column="1">
                 <CheckBox Name="UpdatePage" Content="Auto-save changes?" FontSize="14" Margin="10,10,10,10" HorizontalContentAlignment="Left" VerticalContentAlignment="Center" />
